images_basic_supportance

--- a/services/catalog/docker-compose.yml
+++ b/services/catalog/docker-compose.yml
@@ -24,6 +24,8 @@ services:
       APP_PORT: ${CATALOG_PORT}
     ports:
       - "${CATALOG_PORT}:${CATALOG_PORT}"
+    volumes:
+    - ./:/app
     depends_on:
       - catalog_database
     networks:
